styles correction and image alignment

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,8 @@ body {
 img {
     display: block;
     width: 100%;
+    height: 14em;
+    object-fit: cover;
 }
 
 select {
